# git-pr-mcp-server

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
janus-mcp/: README.md
janus-mcp/janus_mcp/: server.py  state.py
janus-mcp/tests/: test_parse_diff.py  test_ui_expand.py
momos-mcp/: README.md  install.ps1  pyproject.toml  setup.sh
momos-mcp/momos_mcp/: __init__.py  __main__.py  _git.py  ai.py  diff_parser.py  http_server.py  index.html  server.py  state.py
momos-mcp/tests/: conftest.py  test_ai_review.py  test_http.py  test_parse_diff.py  test_shared_state.py  test_ui_expand.py  test_validate_ref.py
pr-review-mcp/: .gitignore  README.md  index.html  mcp_config.json  requirements.txt  server.py  setup.sh  test-long-lines.js
pr-review-mcp/janus_mcp/: ai.py  http_server.py  index.html  server.py  state.py
pr-review-mcp/tests/: test_http.py  test_parse_diff.py  test_shared_state.py
